--- a/frontend/src/assets/css/remindersBoard.module.css
+++ b/frontend/src/assets/css/remindersBoard.module.css
@@ -1,14 +1,36 @@
+@font-face {
+  font-family: "Futura";
+  src: url("../fonts/Futura.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+:root {
+  --Futura: "Futura", sans-serif;
+}
 .remindersBoardContainer {
   width: 360px;
   height: 468px;
   border-radius: 16px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
+  padding-top: 20px;
 }
 .reminderTitleText {
-  font-family: "Futura";
-  src: url("../fonts/Futura.ttf");
+  font-family: var(--Futura);
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+.reminderTextAndButtonContainer {
+  width: 320px;
+  height: 43px;
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  margin-left: 20px;
+}
+
 .addReminderButtonContainer {
   width: 140px;
   height: 40px;
@@ -19,8 +41,18 @@
   border: 1px solid #000020;
   background-color: rgba(208, 188, 255, 0.12);
   column-gap: 8px;
+  cursor: pointer;
+}
+.addReminderButtonContainer:hover {
+  background-color: rgba(208, 188, 255, 0.48);
 }
 .addLogo {
   width: 18px;
   height: 18px;
+}
+.addReminderButtonText {
+  font-family: var(--Futura);
+  font-size: 14px;
+  font-weight: 400;
+  color: #000020;
 }
