--- a/frontend/src/assets/css/dashboardPage.module.css
+++ b/frontend/src/assets/css/dashboardPage.module.css
@@ -1,3 +1,7 @@
 .dashboardPageContainer {
   background-color: #f9f9ff;
 }
+.welcomeBoardAndReminderBoardContainer {
+  display: flex;
+  column-gap: 24px;
+}
