--- a/frontend/src/assets/css/remindersBoard.module.css
+++ b/frontend/src/assets/css/remindersBoard.module.css
@@ -14,6 +14,10 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
   padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  row-gap: 34px;
 }
 .reminderTitleText {
   font-family: var(--Futura);
