--- a/frontend/src/assets/css/dashboardPage.module.css
+++ b/frontend/src/assets/css/dashboardPage.module.css
@@ -5,3 +5,17 @@
   display: flex;
   column-gap: 24px;
 }
+.welcomeBoardAndReveueAndExpensesCardsContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  margin-bottom: 0;
+  padding: 0;
+}
+.revenueAndExpensesContainer {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: flex-end;
+  column-gap: 24px;
+}
