--- a/frontend/src/assets/css/welcomeBoard.module.css
+++ b/frontend/src/assets/css/welcomeBoard.module.css
@@ -7,6 +7,7 @@
   padding-left: 34px;
   padding-top: 75px;
   position: relative;
+  box-sizing: border-box;
 }
 .welcomeBoardMainText {
   font-family: "Futura";
@@ -36,8 +37,9 @@
 }
 .welcomeBoardImage {
   position: absolute;
-  bottom: 0;
-  right: 0;
-
+  bottom: 1px;
+  right: 20px;
+  width: 200px;
+  height: 160px;
   object-fit: cover;
 }
