--- a/frontend/src/assets/css/dashboardPage.module.css
+++ b/frontend/src/assets/css/dashboardPage.module.css
@@ -1,9 +1,17 @@
 .dashboardPageContainer {
   background-color: #f9f9ff;
+  display: flex;
+  column-gap: 52px;
+}
+.dashboardPageRightSideContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 18px;
 }
 .welcomeBoardAndReminderBoardContainer {
   display: flex;
   column-gap: 24px;
+  margin-top: 56px;
 }
 .welcomeBoardAndReveueAndExpensesCardsContainer {
   display: flex;
