--- a/frontend/src/assets/css/addReminder.module.css
+++ b/frontend/src/assets/css/addReminder.module.css
@@ -15,6 +15,10 @@
   --Futura: "Futura", sans-serif;
   --FuturaNormal: "FuturaNormal", sans-serif;
 }
+.addReminderContainerOff {
+  display: none;
+}
+
 .addReminderContainer {
   width: 244px;
   height: 364px;
@@ -28,9 +32,9 @@
   box-sizing: border-box;
   padding-top: 20px;
   position: absolute;
-  top: 154px;
-  right: 418px;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  top: 60px;
+  left: 58px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
 }
 .addReminderMainText {
   display: flex;
@@ -104,11 +108,15 @@
 .reminderIconContainerFocus {
   width: 32px;
   height: 32px;
-  background-color: #69a5ff;
+  background-color: #7bb0ff;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+}
+.addReminderIconImage {
+  width: 24px;
+  height: 24px;
 }
 
 .addReminderButton {
