--- a/frontend/src/assets/css/remindersBoard.module.css
+++ b/frontend/src/assets/css/remindersBoard.module.css
@@ -20,6 +20,7 @@
   row-gap: 34px;
   box-sizing: border-box;
   overflow-y: hidden;
+  position: relative;
 }
 .reminderTitleText {
   font-family: var(--Futura);
