--- a/frontend/src/assets/css/addReminder.module.css
+++ b/frontend/src/assets/css/addReminder.module.css
@@ -113,6 +113,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+  cursor: pointer;
 }
 .addReminderIconImage {
   width: 24px;
