--- a/frontend/src/assets/css/dashboardSidebar.module.css
+++ b/frontend/src/assets/css/dashboardSidebar.module.css
@@ -56,6 +56,11 @@
 .dashboardProfileImage {
   width: 32px;
   height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  object-fit: cover;
+  border-radius: 50%;
 }
 .dashboardProfileText {
   font-family: var(--Futura);
