--- a/frontend/src/assets/css/settingsPage.module.css
+++ b/frontend/src/assets/css/settingsPage.module.css
@@ -51,6 +51,11 @@
 .settingsPageProfilePicture {
   width: 300px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  object-fit: cover;
+  border-radius: 50%;
 }
 .changeProfilePicture {
   width: 290px;
@@ -199,4 +204,14 @@ input {
   font-family: var(--FuturaNormal);
   font-size: 16px;
   border-radius: 8px;
+}
+.fileInput {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+.changeProfilePictureContainer {
+  background-color: rebeccapurple;
 }
